--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "bootstrap": "^5.3.0",
+    "bootstrap-cron-picker": "^1.0.0",
+    "bootstrap-icons": "^1.10.5",
+    "cron-humanize": "^1.0.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-cron-generator": "^2.0.8",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-js-cron": "^4.0.0",
     "react-redux": "^8.1.1",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "typescript": "^4.9.5",
+    "uniqid": "^5.4.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
