--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap-cron-picker": "^1.0.0",
     "bootstrap-icons": "^1.10.5",
     "cron-humanize": "^1.0.7",
+    "express": "^4.18.2",
     "gh-pages": "^5.0.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cron-generator": "^2.0.8",
@@ -30,11 +32,15 @@
     "typescript": "^4.9.5",
     "uniqid": "^5.4.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && copy build\\index.html build\\404.html",
+    "start:local": "npm run build:local && node node_app.js",
+    "build": "set REACT_APP_FRONTEND_TYPE=web&& react-scripts build && copy build\\index.html build\\404.html",
+    "build:local": "set PUBLIC_URL=http://localhost:3487/&& set REACT_APP_FRONTEND_TYPE=local&& react-scripts build && npm run build:exe",
+    "build:exe": "pkg ./node_app.js --targets node12-win-x64",
     "test": "react-scripts test",
     "test:e2e": "cypress run --env type=actual",
     "test:e2e:base": "cypress run --env type=base",
